fix right side menu showing when the user clicks on the edit button, on mobile it covered the whole component

--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -35,7 +35,7 @@
 .component-buttons {
   position: absolute;
   top: 0;
-  margin: 0.8em;
+  margin: 0.5em;
   border-radius: 20px;
 }
 
